--- a/CssStadions.css
+++ b/CssStadions.css
@@ -13,3 +13,8 @@ button#home{
     border-style: none;
     position: absolute;
 }
+#map{
+    width: 100%;
+    height: 800px;
+    position: absolute;
+}
